--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+u-boot (2016.11+dfsg1-2) unstable; urgency=medium
+
+  * u-boot-sunxi: Add nanopi_neo target.
+    Thanks to Paul Tagliamonte. (Closes: #845932).
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Fri, 16 Dec 2016 14:10:52 +0100
+
 u-boot (2016.11+dfsg1-1) unstable; urgency=medium
 
   * New upstream release.
